--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Code Quiz</title>
+    <title>Coding Quiz Challenge</title>
 </head>
 <body>
-    
+    <header>
+        <a href="./highscore.html" id="scorelink">View Highscores</a>
+        <h4 id="timer">Time: 75</h4>
+    </header>
 
 
 
