--- a/index.html
+++ b/index.html
@@ -11,9 +11,29 @@
 <body>
     <header>
         <a href="./highscore.html" id="scorelink">View Highscores</a>
-        <h4 id="timer">Time: 75</h4>
+        <h4 id="timer"></h4>
     </header>
+    <main>
+        <h1>Coding Quiz Challenge</h1>
+        <p id="subtitle">Try to answer the following code-related questions within the time 
+       <br> limit. Keep in mind that incorrect answers will penalize your scoretime by ten seconds!</p>
+        <button id="start">Start Quiz</button>
+    <!-- <div id="quiz">
+        <div class="question-container" id="question">
+            Question goes here.
+        </div>
+        <div class="option-container">
+            <button class="option" id="op1">option1</button>
+            <button class="option" id="op2">option2</button>
+            <button class="option" id="op3">option3</button>
+            <button class="option" id="op4">option4</button>
+        </div>
+        
 
+
+    </div> -->
+
+</main>
 
 
 
