--- a/index.html
+++ b/index.html
@@ -14,20 +14,22 @@
         <h4 id="timer"></h4>
     </header>
     <main>
-        <div class="starterContainer">
+        <div id="starterContainer" data-state="shown">
              <h1 class="title">Coding Quiz Challenge</h1>
             <p id="subtitle">Try to answer the following code-related questions within the time 
             <br> limit. Keep in mind that incorrect answers will penalize your scoretime by ten seconds!</p>
             <button id="start">Start Quiz</button>
         </div>
-        <div id="quizContainer" class="container" style="display: none;">
-            <div id="question" class="question"></div>
-            <button class="option"><input type="radio" name="option" value="1"><span id="opt1"></span></button>
-            <button class="option"><input type="radio" name="option" value="2"><span id="opt2"></span></button>
-            <button class="option"><input type="radio" name="option" value="3"><span id="opt3"></span></button>
-            <button class="option"><input type="radio" name="option" value="4"><span id="opt4"></span></button>
-        </div>
-        <div id="result" class="container result" style="display: none;">
+        <div id="quizContainer" class="container" data-state="hidden">
+            <div id="question" class="question">Question</div>
+            <div id="answerBtns" class="btnGrid">
+                <button class="option">Option 1</button>
+                <button class="option">Option 2</button>
+                <button class="option">Option 3</button>
+                <button class="option">Option 4</button>
+            </div>
+            </div>
+        <div id="result" class="container result" data-state="hidden">
         </div>
 </main>
 <script src="./assets/js/question.js"></script>
