added and organized code in JS and HTML. Edited styling in css

--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
             <button id="start">Start Quiz</button>
         </div>
         <div id="quizContainer" class="hidden">
-            <div id="question"></div>
-            <div id="answerBtns"></div>
+        <div id="question">Question</div>
+            <div id="answerBtns">  
+                <button class="option">Option 1</button>
+                <button class="option">Option 2</button>
+                <button class="option">Option 3</button>
+                <button class="option">Option 4</button>
+            </div>
         </div>
-        <div id="result" class="hidden"></div>
+        <div id="result" class="hidden">CORRECT</div>
 </main>
 <script src="./assets/js/script.js"></script>
 </body>
