created functions ins JS for questions. Worked with a tutor to get the functions working. Created a div in HTML for end score

--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
         <div id="quizContainer" class="hidden">
         <div id="question">Question</div>
             <div id="answerBtns">  
-                <button class="option">Option 1</button>
-                <button class="option">Option 2</button>
-                <button class="option">Option 3</button>
-                <button class="option">Option 4</button>
+                <button class="option" id="opt1">Option 1</button>
+                <button class="option" id="opt2">Option 2</button>
+                <button class="option" id="opt3">Option 3</button>
+                <button class="option" id="opt4">Option 4</button>
             </div>
         </div>
         <div id="result" class="hidden">CORRECT</div>
+        <div id="initials" class="hidden"><p id="score"></p><input id="initialInput" type="text"><button id="initialBtn">Submit</button></div>
 </main>
 <script src="./assets/js/script.js"></script>
 </body>
