--- a/highscore.html
+++ b/highscore.html
@@ -8,11 +8,18 @@
     <title>Highscores</title>
 </head>
 <body>
-    <header>
+    <header id="highscore">
         <h1 class="highscoretitle">Highscores</h1>
     </header>
-
+    <main id="highscorelist">
+        <ul>
+            <li id="1"></li>
+            <li id="2"></li>
+        </ul>
+    </main>
     
-<script src="./assets/js/script.js"></script>
+<script src="./assets/js/script.js"> 
+     var scores= JSON.parse(localStorage.getItem("scores"));
+</script>
 </body>
 </html>
