--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="./highscore.html" id="scorelink">View Highscores</a>
+        <button id="scorelink">View Highscores</button>
         <h4 id="timer"></h4>
     </header>
     <main>
@@ -21,16 +21,22 @@
             <button id="start">Start Quiz</button>
         </div>
         <div id="quizContainer" class="hidden">
-        <div id="question">Question</div>
-            <div id="answerBtns">  
-                <button class="option" id="opt1">Option 1</button>
-                <button class="option" id="opt2">Option 2</button>
-                <button class="option" id="opt3">Option 3</button>
-                <button class="option" id="opt4">Option 4</button>
-            </div>
+            <div id="question">Question</div>
+                <div id="answerBtns">  
+                    <button class="option" id="opt1">Option 1</button>
+                    <button class="option" id="opt2">Option 2</button>
+                    <button class="option" id="opt3">Option 3</button>
+                    <button class="option" id="opt4">Option 4</button>
+                </div>
         </div>
         <div id="result" class="hidden">CORRECT</div>
-        <div id="initials" class="hidden"><p id="score"></p><input id="initialInput" type="text"><button id="initialBtn">Submit</button></div>
+        <div id="initials" class="hidden"><p id="score"></p><input id="initialInput" type="text"><button id="goback">Go back</button><button id="initialBtn">View Highscores</button></div>
+        
+        <div id="highscore" class="hidden">
+            <h1 id="scoretitle">HIGHSCORES</h1>
+                <div id="allscores"></div>
+
+        </div>
 </main>
 <script src="./assets/js/script.js"></script>
 </body>
